first rework, not completed yet but testable

--- a/jekyll/_data/i18n.yml
+++ b/jekyll/_data/i18n.yml
@@ -1,8 +1,9 @@
 locales:
   # English ---------------------------------------------
   en: &DEFAULT_EN
-    index: "Homepage"
     header_image: "Image for"
+    index: "Homepage"
+    last_change: "Last change"
   en_US:
     <<: *DEFAULT_EN     # use en for en_US
   en_UK:
@@ -11,7 +12,8 @@ locales:
   # German translations ---------------------------------
   de: &DEFAULT_DE
     <<: *DEFAULT_EN     # load English values as default
-    index: "Startseite"
     header_image: "Bild für"
+    index: "Startseite"
+    last_change: "Letzte Änderung"
   de_DE:
     <<: *DEFAULT_DE     # use de translation for de_DE
