--- a/jekyll/_data/i18n.yml
+++ b/jekyll/_data/i18n.yml
@@ -1,11 +1,14 @@
 locales:
   # English ---------------------------------------------
   en: &DEFAULT_EN
+    categories: "Categories"
     continue: "Continue"
     header_image: "Image for"
     index: "Homepage"
     last_change: "Last change"
     services: "Quick Guide"
+    tags: "Tags"
+    toc: "On this page"
   en_US:
     <<: *DEFAULT_EN     # use en for en_US
   en_UK:
@@ -14,10 +17,12 @@ locales:
   # German translations ---------------------------------
   de: &DEFAULT_DE
     <<: *DEFAULT_EN     # load English values as default
+    categories: "Kategorien"
     continue: "Weiterlesen"
     header_image: "Bild für"
     index: "Startseite"
     last_change: "Letzte Änderung"
     services: "Schnelleinstieg"
+    toc: "Auf dieser Seite"
   de_DE:
     <<: *DEFAULT_DE     # use de translation for de_DE
